--- a/index.html
+++ b/index.html
@@ -8,119 +8,98 @@
 body {
   margin:0;
   font-family:Poppins,sans-serif;
-  background:linear-gradient(to bottom,#1a1a40,#0f052d);
+  background:linear-gradient(135deg,#1a1a40,#2e166f,#0f052d);
+  background-attachment:fixed;
   color:white;
 }
 
-header {
-  text-align:center;
-  padding:2rem;
-  background:rgba(255,255,255,0.05);
-  backdrop-filter:blur(8px);
-}
-header h1 {
-  font-size:2.5rem;
-  color:#ffccff;
-  text-shadow:0 0 15px #b400ff;
-}
-header p {
-  color:#d0c0ff;
-}
+/* Header */
+header {text-align:center;padding:2rem;background:rgba(255,255,255,0.04);backdrop-filter:blur(10px);}
+header h1{font-size:2.5rem;color:#f3e8ff;text-shadow:0 0 12px #9d4edd;}
+header p{color:#d0c0ff;}
 
-.kategori {
-  margin:1rem;
-  border-radius:12px;
-  overflow:hidden;
-  background:rgba(255,255,255,0.08);
+/* Search */
+.search-bar{display:flex;justify-content:center;margin:1.5rem;}
+.search-bar input{
+  width:90%;max-width:400px;padding:0.7rem 1rem;
+  border-radius:30px;border:none;outline:none;
+  font-size:1rem;color:#fff;background:rgba(255,255,255,0.08);
 }
-.kategori h2 {
-  margin:0;
-  padding:1rem;
-  cursor:pointer;
-  background:rgba(255,255,255,0.1);
-  text-shadow:0 0 8px #7a33ff;
-}
+.search-bar input::placeholder{color:#bbb;}
 
-.items {
-  display: none; /* AWALNYA TERSEMBUNYI */
-  padding:1rem;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap:1rem;
-  display: grid; /* grid tetap diterapkan saat toggle di JS */
-}
+/* Kategori Card */
+.kategori{margin:1rem;border-radius:14px;background:rgba(255,255,255,0.06);box-shadow:0 4px 12px rgba(0,0,0,0.3);transition:0.3s;}
+.kategori:hover{transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,0.4);}
+.kategori h2{margin:0;padding:1rem;cursor:pointer;color:#e0d4ff;text-shadow:0 0 8px #9d4edd;}
 
-.item {
-  background:rgba(255,255,255,0.08);
-  border-radius:12px;
-  padding:1rem;
-  text-align:center;
+/* Items grid */
+.items{display:none;padding:1rem;grid-template-columns:repeat(auto-fit,minmax(160px,1fr));gap:1.2rem;}
+
+/* Item Card */
+.item{background:rgba(255,255,255,0.07);border-radius:12px;padding:1rem;text-align:center;transition:0.3s;}
+.item:hover{transform:translateY(-6px);box-shadow:0 8px 18px rgba(0,0,0,0.4);}
+.item img{max-height:100px;margin-bottom:0.5rem;filter:drop-shadow(0 0 6px rgba(180,0,255,0.4));}
+.item h3{margin:0.5rem 0;color:#f3e8ff;}
+
+/* Tombol */
+.item button,#checkout{
+  background:linear-gradient(135deg,#7a33ff,#b400ff);
+  border:none;padding:0.6rem 1.2rem;border-radius:8px;
+  color:white;cursor:pointer;font-weight:500;
   transition:0.3s;
 }
-.item:hover {
-  transform:translateY(-5px);
-  box-shadow:0 0 15px #7a33ff;
-}
-.item img {
-  max-height:100px;
-  margin-bottom:0.5rem;
-}
-.item h3 {
-  font-size:1rem;
-  margin:0.5rem 0;
-  color:#ffccff;
-}
-.item button {
-  background:#7a33ff;
+.item button:hover,#checkout:hover{background:linear-gradient(135deg,#9d4edd,#c77dff);}
+
+/* Tombol X Hapus */
+.btn-x{
+  margin-left:10px;
+  background:linear-gradient(135deg,#7a33ff,#b400ff);
   border:none;
-  padding:0.5rem 1rem;
-  border-radius:8px;
-  color:white;
+  width:26px;height:26px;
+  border-radius:50%;
+  color:white;font-weight:bold;
   cursor:pointer;
+  line-height:24px;text-align:center;
   transition:0.3s;
 }
-.item button:hover {
-  background:#b400ff;
-}
+.btn-x:hover{background:linear-gradient(135deg,#9d4edd,#c77dff);}
 
-#keranjang {
-  margin:2rem;
-  padding:1rem;
-  background:rgba(255,255,255,0.08);
-  border-radius:12px;
-}
-#keranjang h2 {
-  margin-top:0;
-  color:#ffccff;
-}
-#checkout {
-  background:#00cc66;
-  border:none;
-  padding:0.7rem 1.5rem;
-  border-radius:8px;
-  color:white;
-  cursor:pointer;
-  margin-top:1rem;
-}
-#checkout:hover {
-  background:#00994d;
-}
+/* Keranjang */
+#keranjang{margin:2rem;padding:1.5rem;background:rgba(255,255,255,0.07);border-radius:14px;box-shadow:0 4px 12px rgba(0,0,0,0.3);}
+#keranjang h2{margin-top:0;color:#f3e8ff;text-shadow:0 0 8px #9d4edd;}
+
+/* Search Results */
+#searchResults{display:none;margin:1rem;border-radius:14px;background:rgba(255,255,255,0.08);}
+#searchResults h2{margin:0;padding:1rem;color:#ffd6ff;text-shadow:0 0 8px #c77dff;}
+#searchResults .items{display:grid !important;}
 </style>
 </head>
 <body>
 <header>
-<h1>Warung Isekai</h1>
-<p>Tempat jual perlengkapan isekai by Yukii ✨</p>
+  <h1>Warung Isekai</h1>
+  <p>Tempat jual perlengkapan isekai by Yukii ✨</p>
 </header>
+
+<!-- Search -->
+<div class="search-bar">
+  <input type="text" id="searchInput" placeholder="Cari item...">
+</div>
+
+<!-- Hasil Pencarian -->
+<div id="searchResults">
+  <h2>🔎 Hasil Pencarian</h2>
+  <div class="items" id="resultItems"></div>
+</div>
 
 <main>
 <!-- Kategori Pedang -->
 <div class="kategori">
 <h2 onclick="toggleItems(this)">⚔️ Pedang</h2>
 <div class="items">
-<div class="item"><img src="images/sword.png" alt="Excalibur"><h3>Excalibur</h3><button onclick="tambahKeranjang('Excalibur')">Beli</button></div>
-<div class="item"><img src="images/katana.png" alt="Katana Neraka"><h3>Katana Neraka</h3><button onclick="tambahKeranjang('Katana Neraka')">Beli</button></div>
-<div class="item"><img src="images/flame-sword.png" alt="Pedang Api"><h3>Pedang Api</h3><button onclick="tambahKeranjang('Pedang Api')">Beli</button></div>
-<div class="item"><img src="images/ice-sword.png" alt="Pedang Es"><h3>Pedang Es</h3><button onclick="tambahKeranjang('Pedang Es')">Beli</button></div>
+  <div class="item" data-nama="Excalibur" data-img="images/sword.png"><img src="images/sword.png"><h3>Excalibur</h3><button onclick="tambahKeranjang('Excalibur')">Beli</button></div>
+  <div class="item" data-nama="Katana Neraka" data-img="images/katana.png"><img src="images/katana.png"><h3>Katana Neraka</h3><button onclick="tambahKeranjang('Katana Neraka')">Beli</button></div>
+  <div class="item" data-nama="Pedang Api" data-img="images/flame-sword.png"><img src="images/flame-sword.png"><h3>Pedang Api</h3><button onclick="tambahKeranjang('Pedang Api')">Beli</button></div>
+  <div class="item" data-nama="Pedang Es" data-img="images/ice-sword.png"><img src="images/ice-sword.png"><h3>Pedang Es</h3><button onclick="tambahKeranjang('Pedang Es')">Beli</button></div>
 </div>
 </div>
 
@@ -128,10 +107,10 @@ header p {
 <div class="kategori">
 <h2 onclick="toggleItems(this)">🪄 Tongkat Sihir</h2>
 <div class="items">
-<div class="item"><img src="images/magic-staff.png" alt="Tongkat Void"><h3>Tongkat Void</h3><button onclick="tambahKeranjang('Tongkat Void')">Beli</button></div>
-<div class="item"><img src="images/staff-dark.png" alt="Tongkat Cahaya"><h3>Tongkat Cahaya</h3><button onclick="tambahKeranjang('Tongkat Cahaya')">Beli</button></div>
-<div class="item"><img src="images/staff-dark.png" alt="Tongkat Kegelapan"><h3>Tongkat Kegelapan</h3><button onclick="tambahKeranjang('Tongkat Kegelapan')">Beli</button></div>
-<div class="item"><img src="images/staff-dark.png" alt="Tongkat Alam"><h3>Tongkat Alam</h3><button onclick="tambahKeranjang('Tongkat Alam')">Beli</button></div>
+  <div class="item" data-nama="Tongkat Void" data-img="images/magic-staff.png"><img src="images/magic-staff.png"><h3>Tongkat Void</h3><button onclick="tambahKeranjang('Tongkat Void')">Beli</button></div>
+  <div class="item" data-nama="Tongkat Cahaya" data-img="images/staff-dark.png"><img src="images/staff-dark.png"><h3>Tongkat Cahaya</h3><button onclick="tambahKeranjang('Tongkat Cahaya')">Beli</button></div>
+  <div class="item" data-nama="Tongkat Kegelapan" data-img="images/staff-dark.png"><img src="images/staff-dark.png"><h3>Tongkat Kegelapan</h3><button onclick="tambahKeranjang('Tongkat Kegelapan')">Beli</button></div>
+  <div class="item" data-nama="Tongkat Alam" data-img="images/staff-dark.png"><img src="images/staff-dark.png"><h3>Tongkat Alam</h3><button onclick="tambahKeranjang('Tongkat Alam')">Beli</button></div>
 </div>
 </div>
 
@@ -139,62 +118,82 @@ header p {
 <div class="kategori">
 <h2 onclick="toggleItems(this)">🧪 Ramuan</h2>
 <div class="items">
-<div class="item"><img src="images/potion.png" alt="Elixir Abadi"><h3>Elixir Abadi</h3><button onclick="tambahKeranjang('Elixir Abadi')">Beli</button></div>
-<div class="item"><img src="images/potion.png" alt="Ramuan Kehidupan"><h3>Ramuan Kehidupan</h3><button onclick="tambahKeranjang('Ramuan Kehidupan')">Beli</button></div>
-<div class="item"><img src="images/potion-fire.png" alt="Ramuan Api"><h3>Ramuan Api</h3><button onclick="tambahKeranjang('Ramuan Api')">Beli</button></div>
-<div class="item"><img src="images/potion-fire.png" alt="Ramuan Es"><h3>Ramuan Es</h3><button onclick="tambahKeranjang('Ramuan Es')">Beli</button></div>
+  <div class="item" data-nama="Elixir Abadi" data-img="images/potion.png"><img src="images/potion.png"><h3>Elixir Abadi</h3><button onclick="tambahKeranjang('Elixir Abadi')">Beli</button></div>
+  <div class="item" data-nama="Ramuan Kehidupan" data-img="images/potion.png"><img src="images/potion.png"><h3>Ramuan Kehidupan</h3><button onclick="tambahKeranjang('Ramuan Kehidupan')">Beli</button></div>
+  <div class="item" data-nama="Ramuan Api" data-img="images/potion-fire.png"><img src="images/potion-fire.png"><h3>Ramuan Api</h3><button onclick="tambahKeranjang('Ramuan Api')">Beli</button></div>
+  <div class="item" data-nama="Ramuan Es" data-img="images/potion-fire.png"><img src="images/potion-fire.png"><h3>Ramuan Es</h3><button onclick="tambahKeranjang('Ramuan Es')">Beli</button></div>
 </div>
 </div>
 
 <!-- Keranjang -->
 <div id="keranjang">
-<h2>🛒 Keranjang</h2>
-<ul id="listKeranjang"></ul>
-<button id="checkout" onclick="checkout()">Checkout</button>
+  <h2>🛒 Keranjang</h2>
+  <ul id="listKeranjang"></ul>
+  <button id="checkout" onclick="checkout()">Checkout</button>
 </div>
 </main>
 
 <script>
-// Sembunyikan semua items saat halaman pertama kali dibuka
-window.addEventListener("DOMContentLoaded", () => {
-  const allItems = document.querySelectorAll(".items");
-  allItems.forEach(div => {
-    div.style.display = "none"; // pastikan tersembunyi
-  });
-});
-
+// toggle kategori
 function toggleItems(el){
   let items = el.nextElementSibling;
-  if(items.style.display === "grid"){
-    items.style.display = "none";
-  } else {
-    items.style.display = "grid";
-  }
+  items.style.display = (items.style.display === "grid") ? "none" : "grid";
 }
 
+// keranjang
 let keranjang = [];
 function tambahKeranjang(item){
   keranjang.push(item);
   updateKeranjang();
 }
 function updateKeranjang(){
-  let list = document.getElementById("listKeranjang");
-  list.innerHTML = "";
-  keranjang.forEach(i=>{
-    let li = document.createElement("li");
-    li.textContent = i;
+  let list=document.getElementById("listKeranjang");
+  list.innerHTML="";
+  keranjang.forEach((i,idx)=>{
+    let li=document.createElement("li");
+    li.textContent=i+" ";
+    let btn=document.createElement("button");
+    btn.textContent="X";
+    btn.className="btn-x";
+    btn.onclick=()=>{keranjang.splice(idx,1);updateKeranjang();};
+    li.appendChild(btn);
     list.appendChild(li);
   });
 }
 function checkout(){
-  if(keranjang.length === 0){
-    alert("Keranjang masih kosong!");
-    return;
-  }
-  let pesan = "Halo, saya mau beli:\n" + keranjang.map(i=>"- "+i).join("\n");
-  let url = "https://wa.me/6288239439351?text=" + encodeURIComponent(pesan);
-  window.open(url,"_blank");
+  if(!keranjang.length){alert("Keranjang masih kosong!");return;}
+  let pesan="Halo, saya mau beli:\n"+keranjang.map(i=>"- "+i).join("\n");
+  window.open("https://wa.me/6288239439351?text="+encodeURIComponent(pesan),"_blank");
 }
+
+// ===== SEARCH TANPA DUPLIKAT =====
+const allData=[...document.querySelectorAll(".item")].map(i=>({
+  nama:i.dataset.nama,
+  img:i.dataset.img
+}));
+
+document.getElementById("searchInput").addEventListener("input",function(){
+  let val=this.value.toLowerCase();
+  let resultBox=document.getElementById("searchResults");
+  let container=document.getElementById("resultItems");
+  container.innerHTML="";
+  if(val){
+    resultBox.style.display="block";
+    allData.filter(d=>d.nama.toLowerCase().includes(val)).forEach(d=>{
+      let card=document.createElement("div");
+      card.className="item";
+      card.innerHTML=`
+        <img src="${d.img}" alt="${d.nama}">
+        <h3>${d.nama}</h3>
+        <button onclick="tambahKeranjang('${d.nama}')">Beli</button>
+      `;
+      container.appendChild(card);
+    });
+    window.scrollTo({top:0,behavior:"smooth"});
+  }else{
+    resultBox.style.display="none";
+  }
+});
 </script>
 </body>
-                                                                         </html>
+</html>
