--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ header p{color:#d0c0ff;}
 <div class="kategori">
 <h2 onclick="toggleItems(this)">🪄 Tongkat Sihir</h2>
 <div class="items">
-  <div class="item" data-nama="Tongkat Void" data-img="images/void.png"><img src="images/magic-staff.png"><h3>Tongkat Void</h3><button onclick="tambahKeranjang('Tongkat Void')">Beli</button></div>
+  <div class="item" data-nama="Tongkat Void" data-img="images/void.png"><img src="images/void.png"><h3>Tongkat Void</h3><button onclick="tambahKeranjang('Tongkat Void')">Beli</button></div>
   <div class="item" data-nama="Tongkat Cahaya" data-img="images/magic-staff.png"><img src="images/staff-dark.png"><h3>Tongkat Cahaya</h3><button onclick="tambahKeranjang('Tongkat Cahaya')">Beli</button></div>
   <div class="item" data-nama="Tongkat Kegelapan" data-img="images/staff-dark.png"><img src="images/staff-dark.png"><h3>Tongkat Kegelapan</h3><button onclick="tambahKeranjang('Tongkat Kegelapan')">Beli</button></div>
   <div class="item" data-nama="Tongkat Alam" data-img="images/alam.png"><img src="images/staff-dark.png"><h3>Tongkat Alam</h3><button onclick="tambahKeranjang('Tongkat Alam')">Beli</button></div>
