--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ header p{color:#d0c0ff;}
 <h2 onclick="toggleItems(this)">🪄 Tongkat Sihir</h2>
 <div class="items">
   <div class="item" data-nama="Tongkat Void" data-img="images/void.png"><img src="images/void.png"><h3>Tongkat Void</h3><button onclick="tambahKeranjang('Tongkat Void')">Beli</button></div>
-  <div class="item" data-nama="Tongkat Cahaya" data-img="images/magic-staff.png"><img src="images/staff-dark.png"><h3>Tongkat Cahaya</h3><button onclick="tambahKeranjang('Tongkat Cahaya')">Beli</button></div>
+  <div class="item" data-nama="Tongkat Cahaya" data-img="images/magic-staff.png"><img src="images/magic-staff.png"><h3>Tongkat Cahaya</h3><button onclick="tambahKeranjang('Tongkat Cahaya')">Beli</button></div>
   <div class="item" data-nama="Tongkat Kegelapan" data-img="images/staff-dark.png"><img src="images/staff-dark.png"><h3>Tongkat Kegelapan</h3><button onclick="tambahKeranjang('Tongkat Kegelapan')">Beli</button></div>
-  <div class="item" data-nama="Tongkat Alam" data-img="images/alam.png"><img src="images/staff-dark.png"><h3>Tongkat Alam</h3><button onclick="tambahKeranjang('Tongkat Alam')">Beli</button></div>
+  <div class="item" data-nama="Tongkat Alam" data-img="images/alam.png"><img src="images/alam.png"><h3>Tongkat Alam</h3><button onclick="tambahKeranjang('Tongkat Alam')">Beli</button></div>
 </div>
 </div>
 
@@ -142,10 +142,10 @@ header p{color:#d0c0ff;}
 <div class="kategori">
 <h2 onclick="toggleItems(this)">🧪 Ramuan</h2>
 <div class="items">
-  <div class="item" data-nama="Elixir Abadi" data-img="images/abadi.png"><img src="images/potion.png"><h3>Elixir Abadi</h3><button onclick="tambahKeranjang('Elixir Abadi')">Beli</button></div>
+  <div class="item" data-nama="Elixir Abadi" data-img="images/abadi.png"><img src="images/abadi.png"><h3>Elixir Abadi</h3><button onclick="tambahKeranjang('Elixir Abadi')">Beli</button></div>
   <div class="item" data-nama="Ramuan Kehidupan" data-img="images/potion.png"><img src="images/potion.png"><h3>Ramuan Kehidupan</h3><button onclick="tambahKeranjang('Ramuan Kehidupan')">Beli</button></div>
   <div class="item" data-nama="Ramuan Api" data-img="images/potion-fire.png"><img src="images/potion-fire.png"><h3>Ramuan Api</h3><button onclick="tambahKeranjang('Ramuan Api')">Beli</button></div>
-  <div class="item" data-nama="Ramuan Es" data-img="images/es.png"><img src="images/potion-fire.png"><h3>Ramuan Es</h3><button onclick="tambahKeranjang('Ramuan Es')">Beli</button></div>
+  <div class="item" data-nama="Ramuan Es" data-img="images/es.png"><img src="images/es.png"><h3>Ramuan Es</h3><button onclick="tambahKeranjang('Ramuan Es')">Beli</button></div>
 </div>
 </div>
 <!-- Kategori Buku Sihir -->
