--- a/index.html
+++ b/index.html
@@ -93,9 +93,69 @@ header p{color:#d0c0ff;}
 #keranjang h2{margin-top:0;color:#f3e8ff;text-shadow:0 0 8px #9d4edd;}
 
 /* Search Results */
-#searchResults{display:none;margin:1rem;border-radius:14px;background:rgba(255,255,255,0.08);}
-#searchResults h2{margin:0;padding:1rem;color:#ffd6ff;text-shadow:0 0 8px #c77dff;}
-#searchResults .items{display:grid !important;}
+/* Box hasil pencarian */
+#searchResults {
+  display: none;
+  margin: 1.5rem auto;
+  max-width: 900px;
+  border-radius: 16px;
+  background: rgba(255, 255, 255, 0.08);
+  padding-bottom: 1rem;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.4);
+  animation: fadeInUp 0.6s ease forwards; /* animasi masuk */
+}
+
+/* Judul hasil pencarian */
+#searchResults h2 {
+  margin: 0;
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.6rem;
+  letter-spacing: 1px;
+  font-family: 'Orbitron', sans-serif; /* font modern */
+  background: linear-gradient(90deg,#ff80ff,#b517ff,#6a00f4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  text-shadow: 0 0 10px rgba(255,128,255,0.6);
+  animation: glowLoop 3s infinite alternate;
+}
+
+/* Grid item */
+#searchResults .items {
+  display: grid !important;
+  gap: 1.2rem;
+  padding: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+}
+
+/* Animasi masuk */
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px) scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0) scale(1);
+  }
+}
+
+/* Efek glowing berulang pada judul */
+@keyframes glowLoop {
+  from {
+    text-shadow: 
+      0 0 6px #ff80ff,
+      0 0 16px #b517ff,
+      0 0 32px #6a00f4;
+  }
+  to {
+    text-shadow: 
+      0 0 12px #ffb3ff,
+      0 0 24px #d580ff,
+      0 0 40px #9d4edd;
+  }
+}
+
 </style>
 </head>
 <body>
