--- a/index.html
+++ b/index.html
@@ -25,9 +25,74 @@ body {
 }
 
 /* Header */
-header {text-align:center;padding:2rem;background:rgba(255,255,255,0.04);backdrop-filter:blur(10px);}
-header h1{font-size:2.5rem;color:#f3e8ff;text-shadow:0 0 12px #9d4edd;}
-header p{color:#d0c0ff;}
+<header>
+  <div class="hero">
+    <h1>Warung Isekai</h1>
+    <p>Tempat jual perlengkapan isekai by Yukii ✨</p>
+  </div>
+</header>
+
+<style>
+/* Container judul */
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+  padding: 3rem 1rem;
+  animation: fadeSlide 1s ease-out forwards;
+}
+
+/* Judul */
+.hero h1 {
+  font-family: 'Audiowide', sans-serif;
+  font-size: 3rem;
+  letter-spacing: 2px;
+  text-align: center;
+  background: linear-gradient(90deg,#ff80ff,#b517ff,#6a00f4);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: glowLoop 3s infinite alternate;
+}
+
+/* Deskripsi */
+.hero p {
+  font-size: 1.2rem;
+  color: #d0c0ff;
+  text-shadow: 0 0 6px rgba(157,77,221,0.6);
+  animation: fadeIn 2s ease-out forwards;
+}
+
+/* Animasi masuk */
+@keyframes fadeSlide {
+  from { opacity: 0; transform: translateY(-40px) scale(0.9); }
+  to   { opacity: 1; transform: translateY(0) scale(1); }
+}
+
+/* Glowing berulang */
+@keyframes glowLoop {
+  from {
+    text-shadow:
+      0 0 8px #ff80ff,
+      0 0 16px #b517ff,
+      0 0 32px #6a00f4;
+  }
+  to {
+    text-shadow:
+      0 0 12px #ffb3ff,
+      0 0 24px #d580ff,
+      0 0 40px #9d4edd;
+  }
+}
+
+/* Fade in untuk teks deskripsi */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to   { opacity: 1; transform: translateY(0); }
+}
+</style>
+
 
 /* Search */
 .search-bar{display:flex;justify-content:center;margin:1.5rem;}
