--- a/index.html
+++ b/index.html
@@ -410,6 +410,29 @@ document.querySelectorAll(".item button").forEach(btn => {
   }
 });
 </script>
+<!-- Footer Credit -->
+<footer class="credit">
+  <p>© 2025 Warung Isekai | Dibuat dengan ❤️ oleh <span>Yukii</span></p>
+</footer>
+
+<style>
+.credit {
+  text-align: center;
+  padding: 1.5rem;
+  margin-top: 3rem;
+  background: rgba(255,255,255,0.05);
+  border-top: 1px solid rgba(255,255,255,0.1);
+  font-size: 0.9rem;
+  color: #d0c0ff;
+  text-shadow: 0 0 6px rgba(157,77,221,0.6);
+}
+.credit span {
+  color: #ff80ff;
+  font-weight: bold;
+  text-shadow: 0 0 8px #b517ff, 0 0 16px #6a00f4;
+}
+</style>
+
 </body>
                                                                                                                                </html>
   
