--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ body {
   <!-- Header -->
   <header class="hero">
     <h1 class="judul">Warung Isekai</h1>
-    <p>Tempat jual perlengkapan isekai by Yukii ✨</p>
+    <p></p>
   </header>
 </body>
 </html>
@@ -412,7 +412,7 @@ document.querySelectorAll(".item button").forEach(btn => {
 </script>
 <!-- Footer Credit -->
 <footer class="credit">
-  <p>© 2025 Warung Isekai | Dibuat dengan ❤️ oleh <span>Yukii</span></p>
+  <p>© 2025 Warung Isekai | Dibuat oleh <span>Yukii</span></p>
 </footer>
 
 <style>
