--- a/index.html
+++ b/index.html
@@ -32,6 +32,6 @@
   <body class="bg-gray-900 text-white">
     <div id="root"></div>
     <!-- The data-presets attribute is crucial for Babel to know how to transpile TSX -->
-    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" src="./index.tsx"></script>
   </body>
 </html>
